Map-Slide fix on mobile devices

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -405,7 +405,10 @@ body {
         z-index: 9999;
     }
     .vds-mode .map-slider {
-        padding: 1rem 12rem;
+        padding: 1rem 5rem;
+        @media (min-width: 767px) {
+            padding: 1rem 12rem;
+        }
     }
     .map-slider-overlay {
         background: #f6f6f6;
